@startuml

entity Kandidat {
    * kandidatnr : INT
    * fornavn : VARCHAR(255)
    * etternavn : VARCHAR(255)
    * telefon : VARCHAR(20)
    * epost : VARCHAR(255)
}

entity Bedrift {
    * navn : VARCHAR(255)
    * organisasjonsnr : INT
    * telefon : VARCHAR(20)
    * epost : VARCHAR(255)
}

entity Kvalifikasjon {
    * kvalifikasjonsnr : INT
    * kandidatnr : INT
    * beskrivelse : VARCHAR(255)
}

entity Oppdrag {
    * oppdragsnr : INT
    * kandidatnr : INT
    * bedriftsnavn : VARCHAR(255)
    * Kvalifikasjon : VARCHAR(255)
    * startdato : DATE
    * sluttdato : DATE
}

entity Jobbhistorikk {
    * jobbhistorikk_id : INT
    * kandidatnr : INT
    * oppdragsnr : INT
    * virkelig_startdato : DATE
    * virkelig_sluttdato : DATE
    * timer_arbeidet : INT
}

entity Sluttattest {
    * attest_id : INT
    * oppdragsnr : INT
    * kandidatnr : INT
    * beskrivelse : VARCHAR(255)
}

Oppdrag ||--o{ Kandidat
Oppdrag ||--o{ Bedrift

Jobbhistorikk ||--o{ Kandidat
Jobbhistorikk ||--o{ Oppdrag

Kvalifikasjon ||--o{ Kandidat

Sluttattest ||--o{ Kandidat
Sluttattest ||--o{ Oppdrag



@enduml